Updating java sdk to 2.9.0 Bumps suggested JDK to 25